[project]
name = "piaso"
version = "0.1.0"
description = "Precise Intregrative Analysis of Single-cell Omics"
authors = [
    {name = "Min Dai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.6,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
